// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`generatePostFileContent > should correctly format YAML frontmatter 1`] = `
"
title: Test Post
pubDate: 2023-01-01T12:00:00.000Z
author: Test Author
postType: blog
draft: false
"
`;

exports[`generatePostFileContent > should handle frontmatter with optional fields 1`] = `
"
title: Test Post
pubDate: 2023-01-01T12:00:00.000Z
author: Test Author
postType: blog
draft: false
description: A test description.
tags:
  - test
  - sample
series: Test Series
"
`;
